# openvino_messenger_assistant

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TelegramRAG.spec  article_processor.py  debug_npu_detection.py  direct_npu_select.py  env.example  llm-rag-langchain-genai.ipynb  npu_direct_loader.py  ov_langchain_helper.py  pyproject.toml  requirements-no-torch.txt  requirements.txt  requirements_gradio.txt  requirements_telegram.txt  run_qt_app.py  setup.py  telegram_ingestion.py  telegram_rag_example.ipynb  telegram_rag_gradio.py  telegram_rag_integration.py  telegram_rag_qt.py  test_devices.py  test_npu_models.py  verify_npu_selection.py
benchmarks/: run_benchmarks.py  sample_queries.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  FINAL_REPORT.md  PROJECT_STRUCTURE.md  release_guide.md  telegram_rag_medium_article.md
examples/: __init__.py  telegram_rag_gradio.py
hooks/: pyi_rth_openvino_paths.py
src/: __init__.py  llm_config.py  npu_models.py  ov_langchain_helper.py  telegram_ingestion.py  telegram_rag_qt.py
tests/: __init__.py
