[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvino-messenger-assistant"
version = "1.0.0"
description = "Advanced Telegram message analysis using OpenVINO and RAG"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Siddhant Chauhan", email = "chauhanjoy10@example.com"},
]
maintainers = [
    {name = "Siddhant Chauhan", email = "chauhanjoy10@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["telegram", "rag", "openvino", "ai", "nlp", "chatbot", "langchain", "qt"]
requires-python = ">=3.8"
dependencies = [
    "openvino>=2024.0.0",
    "openvino-genai>=2024.4.0",
    "openvino-tokenizers>=2024.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "telethon>=1.28.0",
    "gradio>=4.0.0",
    "lxml[html_clean]>=5.1.0",
    "huggingface_hub>=0.26.0",
    "PySide6>=6.6.0",
    "jupyterlab",
    "ipywidgets>=7.6.0",
    "tqdm>=4.64.0",
    "aiofiles>=0.8.0",
    "nest-asyncio>=1.5.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "markdown>=3.4.0",
    "pathlib-mate>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.15.0",
]
gpu = [
    "openvino-dev[tensorflow,pytorch]>=2024.0",
    "faiss-gpu>=1.7.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/siddhant-0707/openvino_messenger_assistant"
Documentation = "https://github.com/siddhant-0707/openvino_messenger_assistant#readme"
Repository = "https://github.com/siddhant-0707/openvino_messenger_assistant"
"Bug Tracker" = "https://github.com/siddhant-0707/openvino_messenger_assistant/issues"
Changelog = "https://github.com/siddhant-0707/openvino_messenger_assistant/blob/main/CHANGELOG.md"

[project.scripts]
telegram-rag = "run_qt_app:main"
telegram-rag-qt = "telegram_rag_qt:main"
telegram-rag-gradio = "telegram_rag_gradio:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_rag_*", "*.py"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
] 